cluster/apps/networking-system/external-services/omada-controller/endpoints.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.26.1-standalone-strict/endpoints-v1.json
apiVersion: v1
kind: Endpoints
metadata:
  name: omada-controller
subsets:
  - addresses:
      - ip: ${CONFIG_OMADA_CONTROLLER_IP}
    ports:
      - name: https
        port: 8043
        protocol: TCP
