cluster/apps/networking-system/external-services/omada-controller/service.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.26.1-standalone-strict/service-v1.json
apiVersion: v1
kind: Service
metadata:
  name: omada-controller
spec:
  ports:
    - name: https
      protocol: TCP
      port: 8043
      targetPort: https
  type: ClusterIP
