cluster/apps/networking-system/external-services/omada-controller/httproute.yaml
---
# yaml-language-server: $schema=https://schemas.budimanjojo.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: omada-controller
spec:
  hostnames: ["omada.${SECRET_DOMAIN_0}"]
  parentRefs:
    - name: internal
      namespace: networking-system
      port: 443
  rules:
    - backendRefs:
        - name: omada-controller
          port: 8043
